Group output node doesnt work right in eevee #73505

Closed
opened 2020-01-30 02:06:36 +01:00 by ronald johnson · 6 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: blender-2.82-714e48ec55b6

Short description of error
The values on the group output node doesnt work with eevee but it does in cycles. Is that a limitation or a bug?

1.JPG
2.JPG

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  • switch between eevee and cycles

untitled.blend

**System Information** Operating system: Graphics card: **Blender Version** Broken: blender-2.82-714e48ec55b6 **Short description of error** The values on the group output node doesnt work with eevee but it does in cycles. Is that a limitation or a bug? ![1.JPG](https://archive.blender.org/developer/F8312701/1.JPG) ![2.JPG](https://archive.blender.org/developer/F8312706/2.JPG) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). - switch between eevee and cycles [untitled.blend](https://archive.blender.org/developer/F8312700/untitled.blend)
Author

Added subscriber: @billyand

Added subscriber: @billyand
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

Confirmed, it seems to me that Eevee and Cycles are interpreting the unconnected output group node differently. Connecting the output group node makes this work for me.

Confirmed, it seems to me that Eevee and Cycles are interpreting the unconnected output group node differently. Connecting the output group node makes this work for me.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 1b5b6a5da8

This issue was referenced by 1b5b6a5da83eb15f67fbea2a5d7632b065921808

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-03-23 23:50:58 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73505
No description provided.