Fix T73505 EEVEE: Group output node sockets default value not working

This just cleanup the code and apply the expand to group output nodes.